# ngsutils

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
configs/: chromosomes.yml
ngsutils/: abs2rel.py  abspos2relpos.py  append_biomart_to_annotation_sqlite.py  cli.py  extract_splice_sites.py  extract_upper_lower.py  filter_seq.py  format_refseq_gff.py  format_transcripts_fasta.py  gene2tx.py  get_biomart.py  gff2gtf.py  gtf.py  gtf2bed.py  gtf2bed4igv.py  gtf2sqlite.py  gtf2tsv.py  id2name.py  maf2bed.py  name2id.py  parse_gtf.py  remove_chr_from_reference.py  rm_tagfrombam.py  sqlite2gtf.py  utils.py
tests/: sample.gff
tests/data/: sample.gff
