[metadata]
name = ngsutils
version = 0.1.1
description = Utilities for NGS processing
author = yh549848

[options]
install_requires =
   docopt
   pandas
   polars
   sqlalchemy
   pysqlite3
   gtfparse
packages = find:
include_package_data = True
package_data =
   ngsutils = data/*.pkl

scripts =
   bin/download_gencode_hs.sh
   bin/gtf2bed.sh
   bin/hisat2_build.sh
   bin/hisat2_build_without_annotation.sh
   bin/kallisto_build.sh
   bin/rsem_build_from_genome.sh
   bin/rsem_build_from_transcripts.sh
   bin/rsem_ebseq_build_with_ngvector.sh
   bin/salmon_build.sh
   bin/star_build.sh
   bin/star_build_without_annotation.sh


[options.entry_points]
console_scripts =
   extract_upper_lower = ngsutils.extract_upper_lower:main
   gtf2sqlite = ngsutils.gtf2sqlite:main
   gtf2bed4igv = ngsutils.gtf2bed4igv:main
   sqlite2gtf = ngsutils.sqlite2gtf:main
   gtf2tsv = ngsutils.gtf2tsv:main
   gene2tx = ngsutils.gene2tx:main
   id2name = ngsutils.id2name:main
   name2id = ngsutils.name2id:main
   parse_gtf = ngsutils.parse_gtf:main
   remove_chr_from_reference.py = ngsutils.remove_chr_from_reference:main
   maf2bed = ngsutils.maf2bed:main
   format_transcripts_fasta = ngsutils.format_transcripts_fasta:main
   format_refseq_gff.py = format_refseq_gff:main
   append_biomart_to_annotation_sqlite = ngsutils.append_biomart_to_annotation_sqlite:main
   rm_tagfrombam = ngsutils.rm_tagfrombam:main
   extract_splice_sites = ngsutils.extract_splice_sites:main
