[metadata]
name = ngsutils
version = 0.1.1
description = Utilities for NGS processing
author = yh549848

[options]
install_requires =
   docopt
   pandas
   polars
   sqlalchemy
   pysqlite3
   gtfparse
packages = find:
include_package_data = True
package_data =
   ngsutils = data/*.pkl

scripts =
   bin/download_gencode_hs.sh
   bin/gtf2bed.sh
   bin/hisat2_build.sh
   bin/hisat2_build_without_annotation.sh
   bin/kallisto_build.sh
   bin/rsem_build_from_genome.sh
   bin/rsem_build_from_transcripts.sh
   bin/rsem_ebseq_build_with_ngvector.sh
   bin/salmon_build.sh
   bin/star_build.sh
   bin/star_build_without_annotation.sh


[options.entry_points]
console_scripts =
   ngsutils = ngsutils.cli:main
