[metadata]
name = ngsutils
version = 0.2.0
description = Utilities for NGS processing
author = yh549848

[options]
install_requires =
    docopt
    pandas
    polars
    sqlalchemy
    pysqlite3
    gtfparse
packages = find:
include_package_data = True
package_data =
    ngsutils = data/*.pkl

scripts =
    bin/align_star.sh
    bin/build_hisat2.sh
    bin/build_hisat2_wo_gtf.sh
    bin/build_kallisto.sh
    bin/build_rsem_ebseq.sh
    bin/build_salmon.sh
    bin/build_star.sh
    bin/build_star_wo_gtf.sh
    bin/conv_tximport.R
    bin/de_deseq2.R
    bin/download_gencode_hs.sh
    bin/gtf2bed.sh
    bin/pbrun_fq2bam.sh
    bin/quant_salmon.sh

[options.entry_points]
console_scripts =
    ngsutils = ngsutils.cli:main
